src/test/deca/syntax/invalid/3_decl_var_set_manque_type.deca
// Description:
//    tests de non-terminal 'decl_var_set' qui manque le equale .
//
// Resultats:
//    Ligne 10 : Erreur de syntaxe.
//
// Historique:
//    cree le 01/01/2023

// Un exemple de programme Deca
{
    a 0;

}